syntax = "proto3";

option csharp_namespace = "AuctionService";

service GrpcAuction {
    rpc GetAuction (GetAuctionRequest) returns (GrpcAuctionResponse);
}


//this is to get request from the client to get the auction
message GetAuctionRequest {
    string id = 1; //we are not assigning the value rather giving a position
}

//we are defining the model to return in this object
message GrpcAuctionModel {
    string id = 1;
    string seller = 2;
    string auctionEnd = 3;
    int32 reservePrice = 4;
}

//notice in the GrpcAuction object the above and below object have same name and below the return model is specified
message GrpcAuctionResponse {
    GrpcAuctionModel auction = 1;
}